<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/personInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personInfo" />

    <Button
        android:id="@+id/calculateSteps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dip"
        android:text="@string/calculateSteps" />

    <Button
        android:id="@+id/makePlans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dip"
        android:text="@string/makePlans" />
   
    <Button
        android:id="@+id/record"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dip"
        android:text="@string/record" />
    
	<Button
        android:id="@+id/health_index"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="20dip"
        android:text="@string/health_index" />
</LinearLayout>
