<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
	android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/noteitem_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:textSize="18sp"
        android:textColor="#6dcaff" />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:text="@string/name_frequency"
        android:textSize="18sp"
        android:textColor="#B22222" />
        <TextView
        android:id="@+id/noteitem_bufunumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dp"
        android:textSize="18sp"
        android:textColor="#A020F0" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:text="@string/name_calorie"
        android:textSize="18sp"
        android:textColor="#B22222" />
        <TextView
        android:id="@+id/noteitem_calorienumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:textSize="18sp"
        android:textColor="#A020F0" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:text="@string/tim"
        android:textSize="18sp"
        android:textColor="#B22222" />
        <TextView
        android:id="@+id/noteitem_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#A020F0" />
        
    </LinearLayout>
    <TextView
        android:id="@+id/noteitem_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000" />
</LinearLayout>